allow form title word(s) to be broken at any place if it doesn't fit, no longer increase font size for smaller screens, closes #330

--- a/src/scss/_main.scss
+++ b/src/scss/_main.scss
@@ -58,7 +58,7 @@ body{
   @include small-screen-paddings;
   body{
     background: none;
-    @include font-sizes($baseFontSize, 1.05);
+    //@include font-sizes($baseFontSize, 1.05);
     line-height: 1.05 * $baseLineHeight;
     .main{ 
       margin: 0;
@@ -71,7 +71,7 @@ body{
   @include small-screen-paddings;
   body{
     background: none;
-    @include font-sizes($baseFontSize, 1.09);
+    //@include font-sizes($baseFontSize, 1.09);
     line-height: 1.09 * $baseLineHeight;
     .main{ 
       margin: 0;
@@ -477,12 +477,9 @@ html.touch{
     width: 120px;
     margin: 30px 0 10px -60px; }
   h3{
-    //text-align: left;
     padding: 5px 0 15px 0;
     font-weight: bolder;
-    /*border-top: solid 9px #000;*/
-    /*border-bottom: $line;*/
-  }
+    word-wrap: break-word;}
   h4{
     text-align: left;  }
   .jr-repeat {
